# js-contest

./: .gitignore  Dockerfile  Dormant Puzzle Contest - Official Rules.md  LICENSE.md  docker-compose.yml  dormant_llm_puzzle.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
gcp_opt/: Dockerfile  Dockerfile.hpo  analyze_cloud_results.py  cloud_gcg_hyperopt.py  cloud_gcg_optimize.py  cloud_gcg_optimizer.py  cloud_gcp_opt.py  migrate_bucket.py  monitor_compute.sh  monitor_with_docker.sh  orbital_manager.py  push_hpo_image_to_gcp.sh  push_image_to_gcp.sh  stage_data.sh  start_spot_instance.sh  sync_results.sh
manuscript/: appendix_c.md  brady2026.md  generate_appendix_table.py
src/: ablate_trigger.py  analyze_gcg_results.py  analyze_latent_space.py  analyze_trajectory.py  analyze_trajectory_qr.py  bayesian_saturation_analysis.py  build_corpus.py  combine_anchor_tokens.py  combine_candiates.py  compare_trigger_axis.py  decode_trigger.py  enrich_cgc_jsonl.py  evaluate_corpus.py  evaluate_js_response.py  extract_activations.py  extract_stratified_queue.py  gcg_trigger_search.py.py  offline_trigger_search.py  plot_gcg_results.py  probe_js_activation_layers.py  query_corpus.py  raw_token_hf_test.py  summarize_js_reply.py  system_prompt.py  test_trigger_js_api.py  verify_manifolds.py
src/utils/: asses_distribution.py  combine_parquet.py  find_and_kill_gpus.py  llm_eval_gcg_logs.py  migrate_db.py  migrate_schema.py  query_balanced_ds.py  query_corpus.py  query_corpus_summary.py  query_counts.py  reset_grading.py  reset_prompts_db.py  reset_status.py  setup_eval_db.py  (+2 more)
